# CFD-SIMPLE-Rust

./: Cargo.toml  README.md  enviroment.json  out.txt  out1.txt  out2.txt
Enviroments/: cavity_flow.json  enviroment.json
src/: backward_facing_step.rs  lib.rs  lid_driven_cavity.rs  main.rs  maths.rs  physics.rs  pipe_flow.rs  plotter.rs  tools.rs
src/backward_facing_step/: correct_parameters.rs  face_velocity.rs  get_links_momentum.rs  get_links_pressure_correction.rs  postprocessing.rs  residuals.rs  solver.rs  solver_correction.rs
src/lid_driven_cavity/: correct_parameters.rs  face_velocity.rs  get_links_momentum.rs  get_links_pressure_correction.rs  postprocessing.rs  residuals.rs  solver.rs  solver_correction.rs
src/physics/: correct_velocities.rs  face_velocity.rs  get_links_momentum.rs  get_links_pressure_correction.rs  residuals.rs  solver.rs  solver_correction.rs
src/pipe_flow/: correct_parameters.rs  face_velocity.rs  get_links_momentum.rs  get_links_pressure_correction.rs  postprocessing.rs  residuals.rs  solver.rs  solver_correction.rs
