[package]
name = "cfd_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
itertools-num = "0.1.3"
clap = {version = "4.2.1", features = ["cargo"]}

[dependencies.cpython]
git = "https://github.com/dgrunwald/rust-cpython.git"
default-features = false
features = ["python3-sys"]

[profile.release]  
debug = true
